--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,11 @@ div.cart-list > h3 {
     border-bottom: 1px solid rgb(228, 228, 228);
 }
 
+div.img-list img {
+    cursor: pointer;
+    border: 2px solid hsl(26, 100%, 55%);
+}
+
 @media screen and (max-width: 1170px) {
     section.main-content {
         display: flex;
@@ -271,6 +276,10 @@ div.cart-list > h3 {
     }
     div.content {
         padding: 80px 7rem 20px;
+    }
+
+    ul {
+        display: none;
     }
 }
 
@@ -388,9 +397,38 @@ div.cart-list > h3 {
     }
 
     header > .fas {
+        cursor: pointer;
         display: block;
         position: absolute;
         left: 15px;
         top: 25px;
+    }
+
+    div.side-menu {
+        width: 60%;
+        height: 130vh;
+        background-color: #fff;
+        position: absolute;
+        top: 0;
+        transform: translate(-100%);
+        transition: 1s;
+    }
+
+    div.side-menu > i {
+        cursor: pointer;
+        position: absolute;
+        left: 1.5rem;
+        top: 2rem;
+    }
+
+    ul {
+        flex-direction: column;
+        display: block;
+        position: absolute;
+        /* right: 20px; */
+        z-index: 100;
+        top: 4rem;
+        transform: translate(-120%);
+        transition: transform 1s;
     }
 }
