--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,61 @@ div.img-list img {
 div.side-menu {
     display: none;
 }
+
+div.cart-box {
+    position: absolute;
+    top: 10px;
+    left: 0;
+}
+
+div.item-details {
+    padding: 10px;
+    width: 78%;
+    position: relative;
+    left: 20px;
+}
+
+div.cart-box > #delete_icon {
+    cursor: pointer;
+    height: 15px;
+    width: 13px;
+    position: relative;
+    right: 10px;
+}
+
+div.item-details li{
+    display: inline-block;
+
+}
+
+div.item-details > li > p {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+div.item-details > li > #total_price {
+    font-weight: 700;
+}
+div.cart-box > #product_photo {
+    width: 15%;
+    position: relative;
+    left: 18px;
+    border-radius: 5px;
+}
+
+div.cart-list > button {
+    width: 80%;
+    position: absolute;
+    bottom: 16px;
+    left: 30px;
+    padding: 10px;
+    border: none;
+    outline: none;
+    background-color: hsl(26, 100%, 55%);
+    border-radius: 8px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 1170px) {
     section.main-content {
         display: flex;
@@ -388,7 +443,7 @@ div.side-menu {
 
     div.cart-list {
         width: 95%;
-        height: 45%;
+        height: 40%;
         padding: 10px;
         display: none;
         position: absolute;
@@ -397,6 +452,15 @@ div.side-menu {
         background-color: #fff;
         border-radius: 10px;
         box-shadow: 1px 4px 18px #888888;
+    }
+
+    div.cart-box {
+        top: 5px;
+    }
+
+    div.cart-list > button {
+        bottom: 35px;
+        padding: 16px;
     }
 
     header > .fas {
