--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
     font-family: 'Kumbh Sans', sans-serif;
 }
 
+.attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+    
 body {
     display: flex;
     flex-direction: column;
