--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ div.image-section > .main-image{
 }
 
 .main-image > img {
+    cursor: pointer;
     width: 100%;
     border-radius: 15px;
 }
@@ -128,7 +129,7 @@ div.image-section > .main-image{
     width: 15.2%;
     border-radius: 15px;
     cursor: pointer;
-    border: 2px solid hsl(26, 100%, 55%);
+    /* border: 2px solid hsl(26, 100%, 55%); */
 }
 
 .img-list img::after {
@@ -339,6 +340,68 @@ div.cart-list > button {
     border-radius: 8px;
     cursor: pointer;
 }
+
+/* onclick image details */
+
+div.image-wrapper {
+    display: none;
+    background: rgba(0, 0, 0, 0.733);
+    width: 100%;
+    height: 122%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: 1s;
+}
+
+div.image-details > img#close-icon-detail-image {
+    cursor: pointer;
+    margin-left: 27rem;
+}
+
+div.image-details {
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+}
+
+div.big-image {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+div.sublist-images {
+    display: flex;
+    justify-content: center;
+}
+div.big-image img {
+    width: 60%;
+    border-radius: 15px;
+}
+
+div.sublist-images img {
+    cursor: pointer;
+    width: 12.2%;
+    margin: 1rem 0.5rem;
+    border-radius: 15px;
+}
+
+div.sublist-images img::after {
+    content: '';
+    width: 12.2%;
+    background: #fff;
+    position: absolute;
+    z-index: 1000;
+    top: 0;
+}
+
 
 @media screen and (max-width: 1170px) {
     section.main-content {
