--- a/styles.css
+++ b/styles.css
@@ -467,7 +467,7 @@ div.sublist-images img::after {
         grid-template-columns: 1fr 1fr;
         justify-content: flex-start;
         align-items: center;
-        width: 100vw;
+        width: 100%;
         border-bottom: 1px solid rgb(228, 228, 228);
     }
 
